--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -496,7 +496,7 @@ footer {
   padding: 20px;
   background: linear-gradient(to top, var(--ghost-white), var(--bg-page));
   width: 100%;
-  border-bottom: solid 1px var(--bg-page);
+  /* border-bottom: solid 1px var(--bg-page); */
   z-index: 5;
 }
 
@@ -792,4 +792,8 @@ footer p {
   color: white;
   cursor: auto;
   border: none;
+}
+
+.userName {
+  color: var(--safety-orange);
 }
