--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -797,3 +797,10 @@ footer p {
 .userName {
   color: var(--safety-orange);
 }
+
+.loginMsg {
+  font-weight: 600;
+  font-family: "Kaushan Script", cursive;
+  color: var(--onyx);
+  font-size: 28px;
+}
